--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,8 +33,12 @@ jobs:
     COMPILER_PLATFORM: vs2019
     PROJECT_OS: windows
     PREMAKE5: $(System.DefaultWorkingDirectory)/dependencies/windows/premake-core/premake5.exe
-    PREMAKE5_URL: https://github.com/premake/premake-core/releases/download/v5.0.0-alpha15/premake-5.0.0-alpha15-windows.zip
+    PREMAKE5_URL: https://github.com/danielga/garrysmod_common/releases/download/premake-build%2F5.0.0-beta1/premake-5.0.0-beta1-windows.zip
   steps:
+  - checkout: self
+    clean: true
+    fetchDepth: 1
+    submodules: recursive
   - powershell: 'Invoke-Expression ((New-Object System.Net.WebClient).DownloadString("$env:BOOTSTRAP_URL"))'
     displayName: Bootstrap
   - powershell: '& "$env:BUILD_SCRIPT"'
@@ -56,7 +60,10 @@ jobs:
   displayName: Linux
   pool:
     name: Azure Pipelines
-    vmImage: ubuntu-16.04
+    vmImage: ubuntu-latest
+  container:
+    image: registry.gitlab.steamos.cloud/steamrt/scout/sdk:latest
+    options: -v /home
   timeoutInMinutes: 10
   variables:
     BOOTSTRAP_URL: https://raw.githubusercontent.com/danielga/garrysmod_common/master/build/bootstrap.sh
@@ -64,18 +71,20 @@ jobs:
     COMPILER_PLATFORM: gmake
     PREMAKE5: $(System.DefaultWorkingDirectory)/dependencies/linux/premake-core/premake5
     PROJECT_OS: linux
-    PREMAKE5_URL: https://github.com/premake/premake-core/releases/download/v5.0.0-alpha15/premake-5.0.0-alpha15-linux.tar.gz
+    PREMAKE5_URL: https://github.com/danielga/garrysmod_common/releases/download/premake-build%2F5.0.0-beta1/premake-5.0.0-beta1-linux.tar.gz
     CC: gcc-9
     CXX: g++-9
     AR: gcc-ar-9
     NM: gcc-nm-9
     RANLIB: gcc-ranlib-9
   steps:
+  - checkout: self
+    clean: true
+    fetchDepth: 1
+    submodules: recursive
   - bash: 'curl -s -L "$BOOTSTRAP_URL" | bash'
     displayName: Bootstrap
-  - bash: |
-      sudo apt-get update && sudo apt-get install -y g++-9-multilib
-      $BUILD_SCRIPT
+  - bash: '$BUILD_SCRIPT'
     displayName: Build
   - task: CopyFiles@2
     displayName: 'Copy files to $(Build.ArtifactStagingDirectory)'
@@ -102,11 +111,16 @@ jobs:
     COMPILER_PLATFORM: gmake
     PREMAKE5: $(System.DefaultWorkingDirectory)/dependencies/macosx/premake-core/premake5
     PROJECT_OS: macosx
-    PREMAKE5_URL: https://github.com/premake/premake-core/releases/download/v5.0.0-alpha15/premake-5.0.0-alpha15-macosx.tar.gz
+    PREMAKE5_URL: https://github.com/danielga/garrysmod_common/releases/download/premake-build%2F5.0.0-beta1/premake-5.0.0-beta1-macosx.tar.gz
     MACOSX_SDK_URL: https://github.com/phracker/MacOSX-SDKs/releases/download/10.15/MacOSX10.7.sdk.tar.xz
     MACOSX_SDK_DIRECTORY: $(System.DefaultWorkingDirectory)/dependencies/macosx/MacOSX10.7.sdk
     SDKROOT: $(System.DefaultWorkingDirectory)/dependencies/macosx/MacOSX10.7.sdk
+    AR: ar
   steps:
+  - checkout: self
+    clean: true
+    fetchDepth: 1
+    submodules: recursive
   - bash: 'curl -s -L "$BOOTSTRAP_URL" | bash'
     displayName: Bootstrap
   - bash: |
@@ -130,7 +144,7 @@ jobs:
   displayName: Publish to GitHub Releases
   pool:
     name: Azure Pipelines
-    vmImage: ubuntu-18.04
+    vmImage: ubuntu-latest
   timeoutInMinutes: 5
   dependsOn:
     - windows
