--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,15 +25,15 @@ jobs:
   displayName: Windows
   pool:
     name: Azure Pipelines
-    vmImage: windows-2019
+    vmImage: windows-latest
   timeoutInMinutes: 10
   variables:
     BOOTSTRAP_URL: https://raw.githubusercontent.com/danielga/garrysmod_common/master/build/bootstrap.ps1
     BUILD_SCRIPT: $(System.DefaultWorkingDirectory)/dependencies/garrysmod_common/build/build.ps1
-    COMPILER_PLATFORM: vs2019
+    COMPILER_PLATFORM: vs2022
     PROJECT_OS: windows
     PREMAKE5: $(System.DefaultWorkingDirectory)/dependencies/windows/premake-core/premake5.exe
-    PREMAKE5_URL: https://github.com/danielga/garrysmod_common/releases/download/premake-build%2F5.0.0-beta1/premake-5.0.0-beta1-windows.zip
+    PREMAKE5_URL: https://github.com/danielga/garrysmod_common/releases/download/premake-build%2F5.0.0-beta2/premake-5.0.0-beta2-windows.zip
   steps:
   - checkout: self
     clean: true
@@ -46,16 +46,14 @@ jobs:
   - task: CopyFiles@2
     displayName: 'Copy files to $(Build.ArtifactStagingDirectory)'
     inputs:
-      SourceFolder: '$(System.DefaultWorkingDirectory)/projects/windows/vs2019'
+      SourceFolder: '$(System.DefaultWorkingDirectory)/projects/windows/vs2022'
       Contents: '*/Release/*.dll'
       TargetFolder: '$(Build.ArtifactStagingDirectory)'
       CleanTargetFolder: true
       flattenFolders: true
       preserveTimestamp: true
-  - task: PublishBuildArtifacts@1
-    displayName: 'Publish build artifacts'
-    inputs:
-      ArtifactName: windows
+  - publish: '$(Build.ArtifactStagingDirectory)'
+    artifact: windows
 - job: linux
   displayName: Linux
   pool:
@@ -71,7 +69,7 @@ jobs:
     COMPILER_PLATFORM: gmake
     PREMAKE5: $(System.DefaultWorkingDirectory)/dependencies/linux/premake-core/premake5
     PROJECT_OS: linux
-    PREMAKE5_URL: https://github.com/danielga/garrysmod_common/releases/download/premake-build%2F5.0.0-beta1/premake-5.0.0-beta1-linux.tar.gz
+    PREMAKE5_URL: https://github.com/danielga/garrysmod_common/releases/download/premake-build%2F5.0.0-beta2/premake-5.0.0-beta2-linux.tar.gz
     CC: gcc-9
     CXX: g++-9
     AR: gcc-ar-9
@@ -86,24 +84,15 @@ jobs:
     displayName: Bootstrap
   - bash: '$BUILD_SCRIPT'
     displayName: Build
-  - task: CopyFiles@2
+  - bash: 'cp -f "$(System.DefaultWorkingDirectory)/projects/linux/gmake/"*"/Release/"*".dll" "$(Build.ArtifactStagingDirectory)"'
     displayName: 'Copy files to $(Build.ArtifactStagingDirectory)'
-    inputs:
-      SourceFolder: '$(System.DefaultWorkingDirectory)/projects/linux/gmake'
-      Contents: '*/Release/*.dll'
-      TargetFolder: '$(Build.ArtifactStagingDirectory)'
-      CleanTargetFolder: true
-      flattenFolders: true
-      preserveTimestamp: true
-  - task: PublishBuildArtifacts@1
-    displayName: 'Publish build artifacts'
-    inputs:
-      ArtifactName: linux
+  - publish: '$(Build.ArtifactStagingDirectory)'
+    artifact: linux
 - job: macosx
   displayName: macOS
   pool:
     name: Azure Pipelines
-    vmImage: macOS-10.15
+    vmImage: macOS-latest
   timeoutInMinutes: 10
   variables:
     BOOTSTRAP_URL: https://raw.githubusercontent.com/danielga/garrysmod_common/master/build/bootstrap.sh
@@ -111,8 +100,8 @@ jobs:
     COMPILER_PLATFORM: gmake
     PREMAKE5: $(System.DefaultWorkingDirectory)/dependencies/macosx/premake-core/premake5
     PROJECT_OS: macosx
-    PREMAKE5_URL: https://github.com/danielga/garrysmod_common/releases/download/premake-build%2F5.0.0-beta1/premake-5.0.0-beta1-macosx.tar.gz
-    MACOSX_SDK_URL: https://github.com/phracker/MacOSX-SDKs/releases/download/10.15/MacOSX10.7.sdk.tar.xz
+    PREMAKE5_URL: https://github.com/danielga/garrysmod_common/releases/download/premake-build%2F5.0.0-beta2/premake-5.0.0-beta2-macosx.tar.gz
+    MACOSX_SDK_URL: https://github.com/phracker/MacOSX-SDKs/releases/download/11.3/MacOSX10.7.sdk.tar.xz
     MACOSX_SDK_DIRECTORY: $(System.DefaultWorkingDirectory)/dependencies/macosx/MacOSX10.7.sdk
     SDKROOT: $(System.DefaultWorkingDirectory)/dependencies/macosx/MacOSX10.7.sdk
     AR: ar
@@ -124,7 +113,7 @@ jobs:
   - bash: 'curl -s -L "$BOOTSTRAP_URL" | bash'
     displayName: Bootstrap
   - bash: |
-      sudo xcode-select -s "/Applications/Xcode_11.4.1.app/Contents/Developer"
+      sudo xcode-select -s "/Applications/Xcode_11.7.app/Contents/Developer"
       $BUILD_SCRIPT
     displayName: Build
   - task: CopyFiles@2
@@ -136,10 +125,8 @@ jobs:
       CleanTargetFolder: true
       flattenFolders: true
       preserveTimestamp: true
-  - task: PublishBuildArtifacts@1
-    displayName: 'Publish build artifacts'
-    inputs:
-      ArtifactName: macosx
+  - publish: '$(Build.ArtifactStagingDirectory)'
+    artifact: macosx
 - job: publish
   displayName: Publish to GitHub Releases
   pool:
@@ -152,15 +139,12 @@ jobs:
     - macosx
   condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
   steps:
-  - task: DownloadBuildArtifacts@0
-    displayName: 'Download build artifacts'
-    inputs:
-      downloadType: specific
-      parallelizationLimit: 12
+  - download: current
+    patterns: '**/*.dll'
   - task: GitHubRelease@1
     displayName: 'Publish GitHub release $(build.sourceBranchName)'
     inputs:
       gitHubConnection: 'GitHub danielga'
       releaseNotesSource: inline
-      assets: '$(System.ArtifactsDirectory)/**'
+      assets: '$(Pipeline.Workspace)/**/*.dll'
       addChangeLog: false
