--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ jobs:
   displayName: Windows
   pool:
     name: Azure Pipelines
-    vmImage: windows-latest
+    vmImage: windows-2022
   timeoutInMinutes: 10
   variables:
     BOOTSTRAP_URL: https://raw.githubusercontent.com/danielga/garrysmod_common/master/build/bootstrap.ps1
@@ -53,14 +53,15 @@ jobs:
       flattenFolders: true
       preserveTimestamp: true
   - publish: '$(Build.ArtifactStagingDirectory)'
+    displayName: 'Publish Windows binaries'
     artifact: windows
 - job: linux
   displayName: Linux
   pool:
     name: Azure Pipelines
-    vmImage: ubuntu-latest
+    vmImage: ubuntu-22.04
   container:
-    image: registry.gitlab.steamos.cloud/steamrt/scout/sdk:latest
+    image: danielga/steamrt-scout:latest
     options: -v /home
   timeoutInMinutes: 10
   variables:
@@ -84,15 +85,23 @@ jobs:
     displayName: Bootstrap
   - bash: '$BUILD_SCRIPT'
     displayName: Build
-  - bash: 'cp -f "$(System.DefaultWorkingDirectory)/projects/linux/gmake/"*"/Release/"*".dll" "$(Build.ArtifactStagingDirectory)"'
+  - task: CopyFiles@2
     displayName: 'Copy files to $(Build.ArtifactStagingDirectory)'
+    inputs:
+      SourceFolder: '$(System.DefaultWorkingDirectory)/projects/linux/gmake'
+      Contents: '*/Release/*.dll'
+      TargetFolder: '$(Build.ArtifactStagingDirectory)'
+      CleanTargetFolder: true
+      flattenFolders: true
+      preserveTimestamp: true
   - publish: '$(Build.ArtifactStagingDirectory)'
+    displayName: 'Publish Linux binaries'
     artifact: linux
 - job: macosx
   displayName: macOS
   pool:
     name: Azure Pipelines
-    vmImage: macOS-latest
+    vmImage: macOS-11
   timeoutInMinutes: 10
   variables:
     BOOTSTRAP_URL: https://raw.githubusercontent.com/danielga/garrysmod_common/master/build/bootstrap.sh
@@ -126,12 +135,13 @@ jobs:
       flattenFolders: true
       preserveTimestamp: true
   - publish: '$(Build.ArtifactStagingDirectory)'
+    displayName: 'Publish macOS binaries'
     artifact: macosx
 - job: publish
   displayName: Publish to GitHub Releases
   pool:
     name: Azure Pipelines
-    vmImage: ubuntu-latest
+    vmImage: ubuntu-22.04
   timeoutInMinutes: 5
   dependsOn:
     - windows
